# blockchain

1. Blockchain Intuition/: requests.http
1. Blockchain Intuition/python/: README.md  main.py
1. Blockchain Intuition/rust/: Cargo.toml
1. Create a Blockchain/python/: README.md  blockchain.py  main.py  pyproject.toml
1. Create a Blockchain/python/templates/: index.html
1. Create a Blockchain/rust/: Cargo.toml
1. Create a Blockchain/rust/src/: main.rs
2. Create a Cryptocurrency/: requests.http
2. Create a Cryptocurrency/python/: .gitignore  README.md  main.py  node_5001.py  node_5002.py  node_5003.py  pyproject.toml
2. Create a Cryptocurrency/python/templates/: index.html
